# PhysRay

./: CMakeLists.txt
src/: BxDF.h  Integrator.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.h  physray.cpp  physray.h  primitive_shapes.cpp  primitive_shapes.h  renderFunctions.h
src/utils/: Camera.cpp  Camera.h  OrthonormalFrame.h  Point2.h  Vector.h  ray.h  util.h
